fixed logo alignment

--- a/src/sass/components/_hotel-section.scss
+++ b/src/sass/components/_hotel-section.scss
@@ -66,23 +66,9 @@
 
   &__logo {
     margin-top: 6px;
-    font-family: 'Film P3';
-    font-style: normal;
-    text-transform: uppercase;
-    font-weight: 700;
-    font-size: 40px;
-    line-height: 1.075;
-    letter-spacing: 0.3em;
-    color: #494848;
-
+    margin-right: -0.3em;
     @include tablet-up {
       margin-top: 4px;
-      font-size: 64px;
-      line-height: 1.078;
-    }
-
-    @include desktop-up {
-      color: $color-mid-grey;
     }
   }
 
