--- a/src/sass/components/_logo.scss
+++ b/src/sass/components/_logo.scss
@@ -12,7 +12,7 @@ logo--medium-dark  logo--medium-white  logo--medium-grey   */
 
 .logo {
   padding: 0;
-  font-family: Film P3, Arial, sans-serif;
+  font-family: 'Film P3', Arial, sans-serif;
   text-transform: uppercase;
   letter-spacing: 0.3em;
   vertical-align: middle;
@@ -20,6 +20,7 @@ logo--medium-dark  logo--medium-white  logo--medium-grey   */
   line-height: 1.08;
   text-decoration: none;
   font-style: normal;
+  font-weight: 700;
 
   &--small {
     color: $color-white;
@@ -54,9 +55,6 @@ logo--medium-dark  logo--medium-white  logo--medium-grey   */
     font-size: 40px;
     @include tablet-up {
       font-size: 64px;
-    }
-    @include desktop-up {
-      color: $color-mid-grey;
     }
   }
   &--medium-grey {
